  - Fixed the Arab Spring events about army mutinies happening when the Arab Spring has been completed
  - Fixed the cosmetic tag for the Maghreb Federation not properly being set which was causing it to not properly show the flag

 Balance:
  - Reduced the stability penalty for the "Nuclear Power (Offensive)" idea from -0.15 to -0.10

 Content:
  - NEW FOCUS TREE: Sweden
  - Added new decisions for Bolivia to allow them to develop their oil reserves
  - Added "Robert Hanssen" as an operative for the Russians to use with American citizenship
  - Added an event for Venezuela where Hugo Chavez dies and Nicolás Maduro becomes the president (Requires Hugo Chavez to be in power at the time)
  - Added a date trigger for the United States event "Lehman Brothers Collapse" to be any time after 2005.1.1
  - Added new content for North and South Korea as well as a new Sub Tree for North Korea

 Database:
  - Added 16 Su-24MRs to the Ukrainian stockpile in 2000
  - Added 2 missing Marine Regiments to the USA in 2000

 Game Rules:

 Graphics:

 Localization:
  - Removed a confusing statement in the Arab Spring events where it mentioned caretaker governments but was using the name of the former leader instead
  - Fixed the localization for the Transport Helicopter Equipments
  - Improved the localization for the influence tooltip for when a nation is trying to influence
  - Fixed the missing localization for the Cuban focus "Talks with Colombia"
  - Improved the grammar and structure for some Serbian events

 Map:

 Performance:

 User Interface:

v1.12.1b

 AI:
  - AI is less likely to continue to combat influence if their highest influence has a very positive opinion (+100)
  - Improved some of the AI handling of the buying and selling of reactor grade fuel

 Balance:
  - Rebalanced the purchase of reactor grade fuel from 500 units to 2500 so you buy a larger amount of fuel so you do not need to do it as much