@@ -1924,12 +1924,12 @@ is_senegal_states = {
 
 is_caribbean_island_states = {
 	OR = {
-	    state = 23 #Anguilla
+		state = 23 #Anguilla
 		state = 49 #Curacao
 		state = 68 #Guadeloupe
-	    state = 815 #Puerto Rico
-	    state = 854 #Habana
-	    state = 855 #Camagüey
+		state = 815 #Puerto Rico
+		state = 854 #Habana
+		state = 855 #Camagüey
 		state = 856 #Bahamas
 		state = 858 #Jamaica
 		state = 859 #Nord-Haiti
@@ -1946,10 +1946,10 @@ is_caribbean_island_states = {
 		state = 1007 #Cayman Islands
 		state = 1008 #Turks and Caicos
 		state = 1009 #Martinique
-		state = 1121 #Santa Clara		
-		state = 1209 #Montserrat	
-		state = 1210 #Antigua and Barbuda	
-		state = 1211 #British Virgin Islands	
-		state = 1212 #United States Virgin Islands	
+		state = 1121 #Santa Clara
+		state = 1209 #Montserrat
+		state = 1210 #Antigua and Barbuda
+		state = 1211 #British Virgin Islands
+		state = 1212 #United States Virgin Islands
 	}
 }
