@@ -21460,10 +21460,10 @@ country_event = { # Somali Pirates
 		log = "[GetDateText]: [This.GetName]: department_of_state.01.a executed"
 		add_equipment_to_stockpile = {
 			type = convoy
-			amount = -5
+			amount = -2
 		}
 		newline = yes
-		set_temp_variable = { treasury_change = -25.00 }
+		set_temp_variable = { treasury_change = -15.00 }
 		modify_treasury_effect = yes
 		newline = yes
 		set_party_index_to_ruling_party = yes
