@@ -37,10 +37,10 @@ capital = 1182
 			set_air_oob = "USA_2000_nonbba"
 		}
 	}
-	
+
 	add_ideas = {
 		#Economic Cycle
-		stagnation
+		stable_growth
 		#Corruption
 		modest_corruption
 		#Faction 1
