@@ -1,5 +1,5 @@
 ﻿l_english:
-#Starting Spirits:
+ #Starting Spirits:
  Cheap_Labor: "Cheap Labor"
  Cheap_Labor_desc: "Born out of historical patterns of colonial exploitation and mass unskilled labor, [ROOT.GetName]'s workforce remains abundant and inexpensive. Though this labor surplus has spurred post-independence industrial growth, it continues to feed into a cycle of inequality and social unrest that puts national stability on shaky ground."
  RAJ_iri_fake_ns: "Highly Corrupt Military Industry"
@@ -250,7 +250,7 @@
  RAJ_article_three_seventy: "Article 370"
  RAJ_article_three_seventy_desc: "Article 370 of the Indian constitution gave special status to Jammu and Kashmir, a region located in the northern part of the Indian subcontinent and part of the larger region of Kashmir which has been the subject of a dispute between India, Pakistan and China since 1947."
  RAJ_sarva_shisha_abhiyan: "Sarva Shiksha Abhiyan"
- RAJ_sarva_shisha_abhiyan_desc: "Sarva Shiksha Abhiyan, or SSA, is an Indian Government programme aimed at the universalisation of Elementary education "in a time bound manner", the 86th Amendment to the Constitution of India making free and compulsory education to children between the ages of 6 and 14 a fundamental right."
+ RAJ_sarva_shisha_abhiyan_desc: "Sarva Shiksha Abhiyan, or SSA, is an Indian Government programme aimed at the universalisation of Elementary education \"in a time bound manner\", the 86th Amendment to the Constitution of India making free and compulsory education to children between the ages of 6 and 14 a fundamental right."
  RAJ_foreign_education_partner_ship: "Foreign Education Partnership"
  RAJ_foreign_education_partner_ship_desc: "Our students need the opportunity to get a foreign education to become even smarter."
  indian_event.13.t: "Operation West End"
@@ -566,7 +566,7 @@
  RAJ_su30: "Purchase of SU-30"
  RAJ_su30_desc: "Soviet/Russian two-seat multi-purpose fighter of the conquest of air supremacy, generation 4+. It is designed to destroy aerial targets day and night, in simple and complex meteorological conditions, as well as against the background of the ground when using active and passive interference, airspace control, blocking enemy airfields at great depth and actions on land and sea objects. It can also be used to control group combat operations when gaining air supremacy, destroying enemy landings in the air, conducting aerial reconnaissance and destroying ground targets in simple and complex meteorological conditions."
  RAJ_haltejas: "Development of Haltejas"
- RAJ_haltejas_desc: "Indian light multi-purpose fighter of the fourth generation. The single-engine aircraft is made according to the "tailless" scheme with a triangular wing. The prototype of the aircraft made its first flight in 2001; it was developed under the LCA program."
+ RAJ_haltejas_desc: "Indian light multi-purpose fighter of the fourth generation. The single-engine aircraft is made according to the \"tailless\" scheme with a triangular wing. The prototype of the aircraft made its first flight in 2001; it was developed under the LCA program."
  RAJ_haljaguar: "Developing of Haljaguar"
  RAJ_haljaguar_desc: "The fighter-bomber is a joint development of the United Kingdom (British Aircraft Corporation) and France (Breguet). It was in service with the Air Forces of these countries for three decades, and was also exported. The creation of SEPECAT Jaguar was one of the first joint programs of European aircraft manufacturers. The production was handled by the SEPECAT consortium (SEPECAT, from fr. Société Européenne de Production de l'avion École de Combat et d'appui Tactique — European Aviation Production Association for the production of combat and tactical support aircraft)."
  RAJ_embnetra: "EMB-145I Netra"
@@ -1219,7 +1219,7 @@
  indian_event.31.d: "After many years of animosity, our countries have finally reached an allied agreements and are ready to stomp out the capitalist garbage!"
  indian_event.31.a: "Wonderful"
  RAJ_spit_on_revision: "Spit on Revisionists"
- RAJ_spit_on_revision_desc: "In contrast, our recalcitrant neighbor, China, spreads false ideas about "real" socialism. Its political structure threatens us first, and we must eliminate the threat before a preemptive strike is launched against us."
+ RAJ_spit_on_revision_desc: "In contrast, our recalcitrant neighbor, China, spreads false ideas about \"real\" socialism. Its political structure threatens us first, and we must eliminate the threat before a preemptive strike is launched against us."
  indian_event.32.t: "India Offers Alliance"
  indian_event.32.d: "Should we agree?"
  indian_event.32.a: "Of Course"
@@ -1268,7 +1268,7 @@
  RAJ_one_wife_programme_idea: "One Wife Programme"
  RAJ_bamcef_idea: "BAMCEF"
  RAJ_bahujan_samaj_party: "Bahujan Samaj Party"
- RAJ_bahujan_samaj_party_desc: "Indian National Political Party. Represents the interests of Dalits and other low-caste groups of the population - hence the "Bahujan" in the name "the registered castes and tribes of India and other "backward classes" make up 85% of the population."
+ RAJ_bahujan_samaj_party_desc: "Indian National Political Party. Represents the interests of Dalits and other low-caste groups of the population - hence the \"Bahujan\" in the name the registered castes and tribes of India and other \"backward classes\" make up 85% of the population."
  RAJ_torch_of_ambedkar: "Torch of Ambedkar"
  RAJ_torch_of_ambedkar_desc: "The torch Ambedkar lit in 1927 during the Mahad movement has now turned into a wildfire which won't stop until it has avenged the atrocities committed against Dalits throughout history."
  RAJ_social_transformation: "Social Transformation"
@@ -1329,7 +1329,7 @@
  RAJ_demand_sri_lanka: "Demand Sri Lanka"
  RAJ_demand_myanma: "Undermine Myanmar's Independence"
  RAJ_burn_down_the_separatist_sentiments: "Burn Down The Separatist Sentiment"
- RAJ_land_of_freedom: ""Land of Freedom""
+ RAJ_land_of_freedom: "\"Land of Freedom\""
  RAJ_laotian_resorts: "Trip To Laotian Resorts"
  RAJ_johnny_they_are_on_the_trees: "Question Vietnam's Independence"
  RAJ_cambodian_natural_resources: "Cambodian Natural Resources"
@@ -1338,15 +1338,15 @@
  RAJ_bring_hinduism_back_to_indonesia: "Bring Hinduism Back To Indonesia"
  RAJ_land_mines_desc_info: "§YCommunist insurgents are active in this territory!§!"
  RAJ_hoxaists_rebel: "Extremely Active Communist Rebellion"
- RAJ_hoxaists_rebel_desc: "[THIS.GetName] is currently experiencing an intense communist rebellion. The government faces ongoing challenges in suppressing the uprising and restoring order. Violent clashes between communist rebels and government forces are frequent throughout the region."
+ RAJ_hoxaists_rebel_desc: "[RAJ.GetName] is currently experiencing an intense communist rebellion. The government faces ongoing challenges in suppressing the uprising and restoring order. Violent clashes between communist rebels and government forces are frequent throughout the region."
  RAJ_hoxaists_rebel1: "Highly Active Communist Rebellion"
- RAJ_hoxaists_rebel1_desc: "[THIS.GetName] is currently experiencing a highly active communist rebellion. The government faces ongoing challenges in suppressing the uprising and restoring order. Violent clashes between communist rebels and government forces are frequent throughout the region."
+ RAJ_hoxaists_rebel1_desc: "[RAJ.GetName] is currently experiencing a highly active communist rebellion. The government faces ongoing challenges in suppressing the uprising and restoring order. Violent clashes between communist rebels and government forces are frequent throughout the region."
  RAJ_hoxaists_rebel2: "Moderately Active Communist Rebellion"
- RAJ_hoxaists_rebel2_desc: "[THIS.GetName] is currently experiencing a moderately active communist rebellion. The government faces ongoing challenges in suppressing the uprising and restoring order. Violent clashes between communist rebels and government forces are frequent throughout the region."
+ RAJ_hoxaists_rebel2_desc: "[RAJ.GetName] is currently experiencing a moderately active communist rebellion. The government faces ongoing challenges in suppressing the uprising and restoring order. Violent clashes between communist rebels and government forces are frequent throughout the region."
  RAJ_hoxaists_rebel3: "Weakly Active Communist Rebellion"
- RAJ_hoxaists_rebel3_desc: "[THIS.GetName] is currently experiencing a weakly active communist rebellion. The government faces ongoing challenges in suppressing the uprising and restoring order. Violent clashes between communist rebels and government forces are frequent throughout the region."
+ RAJ_hoxaists_rebel3_desc: "[RAJ.GetName] is currently experiencing a weakly active communist rebellion. The government faces ongoing challenges in suppressing the uprising and restoring order. Violent clashes between communist rebels and government forces are frequent throughout the region."
  RAJ_hoxaists_rebel4: "Lowly Active Communist Rebellion"
- RAJ_hoxaists_rebel4_desc: "[THIS.GetName] is currently experiencing a lowly active communist rebellion. The government faces ongoing challenges in suppressing the uprising and restoring order. Violent clashes between communist rebels and government forces are frequent throughout the region."
+ RAJ_hoxaists_rebel4_desc: "[RAJ.GetName] is currently experiencing a lowly active communist rebellion. The government faces ongoing challenges in suppressing the uprising and restoring order. Violent clashes between communist rebels and government forces are frequent throughout the region."
 
  RAJ_brics_alliance_decisions: "BRICS"
  RAJ_brics_alliance_decisions_desc: "§HBRICS§! has now become something much more than an economic bloc. It has become a §Cdefensive alliance§!, meant to hold its own against the other major alliances, like §CNATO§!.\n\nWe will have the opportunity to expand, and grow BRICS into something much more by inviting §Hmore members§!. We will get the ability to invite other countries to our alliance once we have at least §H30% influence§! in the §Heligible countries§!."
@@ -1395,7 +1395,7 @@
  is_top_influencer_taj: "§Y[ROOT.GetNameWithFlag]§! has more than §G>=50%§! influence in §Y[TAJ.GetNameWithFlag]§!"
  is_top_influencer_pak: "§Y[ROOT.GetNameWithFlag]§! has more than §G>=35%§! influence in §Y[PAK.GetNameWithFlag]§!"
  indian_event.36.t: "The Question of Uniting Our Countries"
- indian_event.36.d: "Due to the fact that in recent times a lot of similarities have emerged between our countries both in ideology as well as in economic and political interaction, the question of uniting our countries has arisen between our government and the government of India. Should we unite with our neighbor or will we choose a "different" path?"
+ indian_event.36.d: "Due to the fact that in recent times a lot of similarities have emerged between our countries both in ideology as well as in economic and political interaction, the question of uniting our countries has arisen between our government and the government of India. Should we unite with our neighbor or will we choose a \"different\" path?"
  indian_event.36.a: "Yes, we will build a worldwide Islamist revolution together."
  indian_event.36.b: "We'll choose a different path"
  RAJ_CEN_ASIA_REV_TT: "It will effect the Center Asian region."
@@ -1669,7 +1669,7 @@
 
 
  indian_event.48.t: "The movement against corruption"
- indian_event.48.d: "The Indian anti-corruption movement, popularly known as Anna Andolan, was a series of demonstrations and protests across India that began in 2011 and was intended to establish strong legislation and enforcement against perceived endemic political corruption. The movement was named as one of the "Top 10 News Stories of 2011" by Time magazine. The movement gained momentum from 5 April 2011, when anti-corruption activist Anna Hazare began a hunger strike at the Jantar Mantar monument in New Delhi. The movement aimed to alleviate corruption in the Indian government through introduction of the Jan Lokpal Bill. Another aim, which was led by Ramdev, Kiran Bedi, Arvind Kejriwal and others was the repatriation of black money from foreign banks. Mass protesters focussed on legal and political issues, including political corruption, kleptocracy, and other forms of corruption. The movement was primarily one of non-violent civil resistance and was composed of demonstrations, marches, acts of civil disobedience, hunger strikes, and rallies, and the use of social media to organise, communicate, and raise awareness. The protests were nonpartisan and most protesters were hostile to political parties' attempts to use them to strengthen their own political agenda."
+ indian_event.48.d: "The Indian anti-corruption movement, popularly known as Anna Andolan, was a series of demonstrations and protests across India that began in 2011 and was intended to establish strong legislation and enforcement against perceived endemic political corruption. The movement was named as one of the \"Top 10 News Stories of 2011\" by Time magazine. The movement gained momentum from 5 April 2011, when anti-corruption activist Anna Hazare began a hunger strike at the Jantar Mantar monument in New Delhi. The movement aimed to alleviate corruption in the Indian government through introduction of the Jan Lokpal Bill. Another aim, which was led by Ramdev, Kiran Bedi, Arvind Kejriwal and others was the repatriation of black money from foreign banks. Mass protesters focussed on legal and political issues, including political corruption, kleptocracy, and other forms of corruption. The movement was primarily one of non-violent civil resistance and was composed of demonstrations, marches, acts of civil disobedience, hunger strikes, and rallies, and the use of social media to organise, communicate, and raise awareness. The protests were nonpartisan and most protesters were hostile to political parties' attempts to use them to strengthen their own political agenda."
  indian_event.48.a: "Interesting"
 
  indian_event.49.t: "Hearing in Parliament"
