@@ -26,6 +26,7 @@ v1.12.2
 
  Balance:
   - Reduced the stability penalty for the "Nuclear Power (Offensive)" idea from -0.15 to -0.10
+  - Reduced the cost from Somali Pirate event from 25 billion to 15 billion and instead of 5 convoys, you only lose 2 convoys
 
  Content:
   - NEW FOCUS TREE: Sweden
@@ -38,6 +39,7 @@ v1.12.2
  Database:
   - Added 16 Su-24MRs to the Ukrainian stockpile in 2000
   - Added 2 missing Marine Regiments to the USA in 2000
+  - Changed the starting economic cycle for the USA to "Stable Growth"
 
  Game Rules:
 
@@ -49,6 +51,7 @@ v1.12.2
   - Improved the localization for the influence tooltip for when a nation is trying to influence
   - Fixed the missing localization for the Cuban focus "Talks with Colombia"
   - Improved the grammar and structure for some Serbian events
+  - Fixed the localization for the Indian events about communist rebellions not properly referencing India
 
  Map:
 
